Image v Button elementu, handler pro image

--- a/WpfWalkThrough/App.config
+++ b/WpfWalkThrough/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <applicationSettings>
         <WpfWalkThrough.Properties.Settings>
-            <setting name="ZatimNic" serializeAs="String">
+            <setting name="MeTaky" serializeAs="String">
                 <value>Na mě taky klikni</value>
             </setting>
         </WpfWalkThrough.Properties.Settings>
