--- a/WpfWalkThrough/WpfWalkThrough.csproj
+++ b/WpfWalkThrough/WpfWalkThrough.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\HandRight.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\HandRight.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resource1.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
