--- a/WpfWalkThrough/Properties/Settings.settings
+++ b/WpfWalkThrough/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WpfWalkThrough.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ZatimNic" Type="System.String" Scope="Application">
+    <Setting Name="MeTaky" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Na mě taky klikni</Value>
     </Setting>
   </Settings>
